Adjusting imports/packages

--- a/Testing/tests.ipynb
+++ b/Testing/tests.ipynb
@@ -249,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -263,9 +263,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c8fc5e74ce4fdfd9c8e71a573f185c2a09976b0ed26ba921c5a6601987bbe8e5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
