Moving things around, renaming

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -6,11 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scraper as s\n",
-    "\n",
+    "from ..cds import scraper as s\n",
     "\n",
     "scraper = s.Scraper(browser = s.Scraper.CHROME, incogneto = True, headless = True, verbose = True)\n",
-    "sPkg = s.SearchPkg()\n",
     "\n",
     "primary_site =  s.LinkedIn(\n",
     "        search = 'Data Science',\n",
@@ -26,6 +24,7 @@
     "    )\n",
     "\n",
     "second_site = s.Indeed(**primary_site.get_settings())\n",
+    "sPkg = s.SearchPkg()\n",
     "\n",
     "sPkg.add_Item(primary_site)\n",
     "sPkg.add_Item(second_site)\n",
@@ -62,7 +61,6 @@
     }
    ],
    "source": [
-    "import scraper as s\n",
     "primary_site =  s.LinkedIn(\n",
     "        search = 'Data Science',\n",
     "        location_a = None,\n",
