Fixing imports and function names

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 26\u001b[0m\n\u001b[0;32m     24\u001b[0m sPkg\u001b[39m.\u001b[39madd_Item(second_site)\n\u001b[0;32m     25\u001b[0m scraper\u001b[39m.\u001b[39mset_Pkg(search_pkg \u001b[39m=\u001b[39m sPkg)\n\u001b[1;32m---> 26\u001b[0m data, log \u001b[39m=\u001b[39m scraper\u001b[39m.\u001b[39mrun()\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
    "source": [
-    "from ..cds import scraper as s\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from cds import scraper as s\n",
     "\n",
-    "scraper = s.Scraper(browser = s.Scraper.CHROME, incogneto = True, headless = True, verbose = True)\n",
+    "scraper = s.Scraper(browser = s.Scraper.CHROME, incognito = True, headless = True, verbose = True)\n",
     "\n",
     "primary_site =  s.LinkedIn(\n",
     "        search = 'Data Science',\n",
@@ -25,11 +39,10 @@
     "\n",
     "second_site = s.Indeed(**primary_site.get_settings())\n",
     "sPkg = s.SearchPkg()\n",
-    "\n",
     "sPkg.add_Item(primary_site)\n",
     "sPkg.add_Item(second_site)\n",
-    "scraper.set_Pkg(configPkg = sPkg)\n",
-    "data, log = scraper.run()\n",
+    "scraper.set_Pkg(search_pkg = sPkg)\n",
+    "#data, log = scraper.run() #goal\n",
     "\n"
    ]
   },
