move'n renaming again

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -8,10 +8,8 @@
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from cds import scraper as s\n",
-    "scraper = s.Scraper(browser = s.Scraper.CHROME, incognito = True, headless = True, verbose = True)\n",
-    "\n",
-    "\n",
+    "from cds import Scraper, sites as s\n",
+    "scraper = Scraper(browser = Scraper.CHROME, incognito = True, headless = True, verbose = True)\n",
     "primary_site =  s.LinkedIn(\n",
     "        search = 'Data Science',\n",
     "        location_a = None,\n",
@@ -24,14 +22,10 @@
     "        jobType = None,\n",
     "        experience = None\n",
     "    )\n",
-    "\n",
     "second_site = s.Indeed(**primary_site.get_settings())\n",
-    "sPkg = s.SearchPkg()\n",
-    "sPkg.add_Item(primary_site)\n",
-    "sPkg.add_Item(second_site)\n",
-    "scraper.set_Pkg(search_pkg = sPkg)\n",
-    "#data, log = scraper.run() #goal\n",
-    "\n"
+    "scraper.add_target(primary_site)\n",
+    "scraper.add_target(second_site)\n",
+    "#data, log = scraper.run() #goal"
    ]
   },
   {
