fixed import, fixed searchPkg init

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scrapper running in cds.core.sites.linkedin\n",
+      "Scrapper running in cds.core.sites.indeed\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
@@ -25,7 +34,38 @@
     "second_site = s.Indeed(**primary_site.get_settings())\n",
     "scraper.add_target(primary_site)\n",
     "scraper.add_target(second_site)\n",
-    "#data, log = scraper.run() #goal"
+    "#data, log = scraper.run() #goal\n",
+    "scraper.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scraper2 = Scraper(browser = Scraper.CHROME, incognito = True, headless = True, verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<cds.core.sites.linkedin.LinkedIn at 0x27456dc5410>,\n",
+       " <cds.core.sites.indeed.Indeed at 0x27456d33e90>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scraper._search_pkg.collection"
    ]
   },
   {
