submitting form data part1

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
     "from cds import Scraper, sites as s\n",
-    "scraper = Scraper(browser = Scraper.CHROME, verbose = True)\n",
+    "scraper = Scraper(browser = Scraper.CHROME, headless=False, maximized=False, verbose = True, close=False)\n",
     "primary_site =  s.LinkedIn(\n",
-    "        search = 'Data Science',\n",
-    "        count = 250,\n",
-    "        location_a = None,\n",
+    "        search = \"Data Science\",\n",
+    "        count = 10,\n",
+    "        location_a = \"Auburn Ca\",\n",
     "        location_b = None,\n",
     "        location_c = None,\n",
     "        distance = None,\n",
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "250"
+       "524"
       ]
      },
      "execution_count": 2,
@@ -47,7 +47,8 @@
     }
    ],
    "source": [
-    "len(data[0])"
+    "print(len(data[0]))\n",
+    "data[0]"
    ]
   },
   {
