Refactor, enable attempt limit

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
@@ -12,8 +25,8 @@
     "scraper = Scraper(browser = Scraper.CHROME, headless=False, maximized=False, verbose = True, close=False)\n",
     "primary_site =  s.LinkedIn(\n",
     "        search = \"Data Science\",\n",
-    "        count = 10,\n",
-    "        location_a = \"Auburn Ca\",\n",
+    "        count = 300,\n",
+    "        location_a = None,\n",
     "        location_b = None,\n",
     "        location_c = None,\n",
     "        distance = None,\n",
