removed/added feature plans

--- a/tests/jtest.ipynb
+++ b/tests/jtest.ipynb
@@ -21,15 +21,12 @@
     "primary_site =  s.LinkedIn(\n",
     "        search = \"Data Science\",\n",
     "        count = 44,\n",
-    "        location_a = None,\n",
-    "        location_b = None,\n",
-    "        location_c = None,\n",
+    "        location = \"Auburn, Ca\",\n",
     "        distance = None,\n",
-    "        sort = 'relevant',\n",
-    "        company = None,\n",
     "        salary = None,\n",
     "        jobType = None,\n",
-    "        experience = None\n",
+    "        experience = None,\n",
+    "        on_site = [2, 3]\n",
     "    )\n",
     "# second_site = s.Indeed(**primary_site.get_settings())\n",
     "scraper.add_target(primary_site)\n",
